syntax = "proto3";

import "models.proto";

package v2.services;

option go_package = "github.com/getcouragenow/sys-share/sys-account/service/go/rpc/v2";

service AccountService {
  rpc NewAccount(v2.services.Account) returns (v2.services.Account) {};
  rpc GetAccount(v2.services.GetAccountRequest) returns (v2.services.Account) {};
  rpc ListAccounts(v2.services.ListAccountsRequest) returns (v2.services.ListAccountsResponse) {};
  rpc SearchAccounts(v2.services.SearchAccountsRequest) returns (v2.services.SearchAccountsResponse) {};
  rpc AssignAccountToRole(v2.services.AssignAccountToRoleRequest) returns (v2.services.Account) {};
  rpc UpdateAccount(v2.services.Account) returns (v2.services.Account) {};
  rpc DisableAccount(v2.services.DisableAccountRequest) returns (v2.services.Account) {};
}

service AuthService {
  rpc Register(v2.services.RegisterRequest) returns (v2.services.RegisterResponse) {};
  rpc Login(v2.services.LoginRequest) returns (v2.services.LoginResponse) {};
  // ForgotPassword, then ResetPassword if succeed
  rpc ForgotPassword(v2.services.ForgotPasswordRequest) returns (v2.services.ForgotPasswordResponse) {};
  rpc ResetPassword(v2.services.ResetPasswordRequest) returns (v2.services.ResetPasswordResponse) {};
  // Refresh Access Token endpoint
  rpc RefreshAccessToken(v2.services.RefreshAccessTokenRequest) returns (v2.services.RefreshAccessTokenResponse) {};
}
