syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

package v2.sys_account.services;

option go_package = "github.com/getcouragenow/sys-share/sys-account/service/go/rpc/v2";

message ErrorReason {
  string reason = 1;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string password_confirm = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
  ErrorReason error_reason = 4;
  google.protobuf.Timestamp last_login = 5;
}

message RegisterResponse {
  bool success = 1;
  string success_msg = 2;
  ErrorReason error_reason = 3;
  string verify_token = 4;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  bool success = 1;
  string success_msg = 2;
  ErrorReason error_reason = 3;
  google.protobuf.Timestamp forgot_password_requested_at = 4;
}

message ResetPasswordRequest {
  string email = 1;
  string password = 2;
  string password_confirm = 3;
}

message ResetPasswordResponse {
  bool success = 1;
  string success_msg = 2;
  ErrorReason error_reason = 3;
  google.protobuf.Timestamp reset_password_requested_at = 4;
}

message RefreshAccessTokenRequest {
  string refresh_token = 1;
}

message RefreshAccessTokenResponse {
  string access_token = 1;
  ErrorReason error_reason = 2;
}

message UserDefinedFields {
  map<string, google.protobuf.Value> fields = 1;
}

message VerifyAccountRequest {
  string verify_token = 1;
}

// UserRoles for now
enum Roles {
  INVALID = 0;
  GUEST = 1;
  USER = 2;
  ADMIN = 3; // can be Org or Project Admin
  SUPERADMIN = 4; // can do all
}

// resource: Project
message Project {
  string id = 1;
  string name = 2;
  string logo_url = 3;
  google.protobuf.Timestamp created_at = 4;
  string creator_id = 5;
  string org_id = 6;
  Org org = 7;
}

message ProjectRequest {
  string name = 1;
  string logo_url = 2;
  string creator_id = 3;
  string org_id = 4;
}

message ProjectUpdateRequest {
  string id = 1;
  string name = 2;
  string logo_url = 3;
}

// resource: Org
message Org {
  string id = 1;
  string name = 2;
  string logo_url = 3;
  string contact = 4;
  google.protobuf.Timestamp created_at = 5;
  string creator_id = 6;
  repeated Project projects = 7;
}

message OrgRequest {
  string name = 1;
  string logo_url = 2;
  string contact = 3;
  string creator_id = 4;
}

message OrgUpdateRequest {
  string id = 1;
  string name = 2;
  string contact = 3;
  string logo_url = 4;
}

message IdRequest {
  string id = 1;
}

message ListRequest {
  // limit
  int64 per_page_entries = 1;
  string order_by = 2;
  // number 3 => optional: current_page_id is the last id of the
  // (current) listed Accounts for pagination purpose (cursor).
  string current_page_id = 3;
  bool is_descending = 4;
}

message ListResponse {
  repeated Project projects = 1;
  repeated Org orgs = 2;
  string next_page_id = 3;
}


// UserRole as a message is super simple
// and probably not the very best
// it defines the role as an enum of Roles
// alongside either None (for guest)
// or All ( superadmin)
// or specific project by its id (Project admin)
// or specific org by its id (Org admin)
message UserRoles {
  Roles role = 1;
  string project_id = 2;
  string org_id = 3;
  bool all = 4;
}

// Permission effectively controls access to specific resources
// for any account.
message Permission {
  string resource = 1; // resource can be database table or path to URL or anything else
  string resource_kind = 2; // describes the first resource type (i.e. db table, or path)
  repeated string activities = 3; // activities are i.e. view, write, modify, delete
}

message Account {
  string id = 1;
  string email = 2;
  string password = 3;
  UserRoles role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  google.protobuf.Timestamp last_login = 7;
  bool disabled = 8;
  UserDefinedFields fields = 9;
  UserDefinedFields survey = 10;
  bool verified = 11;
}

message GetAccountRequest {
  string id = 1;
}

message ListAccountsRequest {
  // limit
  int64 per_page_entries = 1;
  string order_by = 2;
  // number 3 => optional: current_page_id is the last id of the
  // (current) listed Accounts for pagination purpose (cursor).
  string current_page_id = 3;
  bool is_descending = 4;
}

message ListAccountsResponse {
  repeated Account accounts = 1;
  // similarly, next_page token is the cursor for the next request
  string next_page_id = 2;
}

message SearchAccountsRequest {
  // query can be either email, UserDefinedFields fields
  map<string, google.protobuf.Value> query = 1;
  ListAccountsRequest search_params = 2;
}

message SearchAccountsResponse {
  ListAccountsResponse search_response = 1;
}

message AssignAccountToRoleRequest {
  string assignee_account_id = 1; // current account's id (to check for privilege)
  string assigned_account_id = 2; // account id to be assigned to role.
  UserRoles role = 3;
}

message DisableAccountRequest {
  string account_id = 1;
}